# ErgalyonManager

./: .dockerignore  .env.example  .gitignore  FRONTEND_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  deploy-wrapper.sh  docker-compose.prod.yml  docker-compose.prod.yml.bak  docker-compose.yml  edm-deploy.sh  pyproject.toml  reembed.py  requirements-dev.txt  requirements.txt  seed_suppliers.py  split_specifications.py
backend/: .env.example  Dockerfile  alembic.ini  celery_worker.py  requirements.txt  test_phase3.sh  test_phase4.sh  test_upload_flow.py
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  seed.py
backend/tests/: conftest.py  test_acceptance_metrics.py  test_audit_service.py  test_celery_task.py  (+5 more)
deploy/: nginx.conf
docs/: Capacity_Plan.md  EDM_Developer_Alignment_Brief.docx  Ergalyon_Master_Blueprint_v2.1.docx  Implementation_Roadmap.md  Master Blueprint  docs_00_product_brief.md  docs_01_scope_and_non_goals.md  docs_02_system_architecture.md  docs_03_data_model.md  docs_04_end_to_end_workflow.md  docs_05_parsing_and_extraction.md  docs_06_normalization_and_matching.md  docs_07_enrichment_pipeline.md  docs_08_review_queue_and_ui.md  docs_09_exports.md  docs_10_supplier_rules_poimenidis.md  docs_11_ai_strategy_hermes_routing.md  docs_12_security_privacy_audit.md  docs_13_testing_acceptance_metrics.md  docs_14_ops_runbooks_release.md  docs_15_roadmap_backlog.md  docs_16_glossary.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: backup.sh  deploy.sh
(+114 files in other folders)
